@@ -1,0 +1,34 @@
+version: 2 # use CircleCI 2.0
+jobs: # A basic unit of work in a run
+  build: # runs not using Workflows must have a `build` job as entry point
+    # directory where steps are run
+    docker: # run the steps with Docker
+      # CircleCI Python images available at: https://hub.docker.com/r/circleci/python/
+      - image: circleci/python:3.7.3
+    steps: # steps that comprise the `build` job
+      - checkout # check out source code to working directory
+      - run:
+          name: Install deps
+          command: |
+            sudo pip install pipenv
+            pipenv install --dev
+      - run:
+          name: Check code syntax
+          command: |
+            pipenv run flake8 .
+      - run:
+          name: Check code style
+          command: |
+            pipenv run black --check .
+      - run:
+          name: Check dependencies graph
+          command: |
+            pipenv check
+      - run:
+          name: Run tests
+          command: |
+            pipenv run pytest --disable-pytest-warnings -v --cov-report=xml --cov=whyemetl .
+      - run:
+          name: Run code coverage
+          command: |
+            pipenv run codecov
