@@ -16,6 +16,8 @@ flask-sqlalchemy = "==2.4.1"
 psycopg2 = "==2.7.7"
 pbr = "*"
 pytest = "==5.4.1"
+pytest-cov = "==2.8.1"
+codecov = "==2.0.22"
 isort = "==4.3.21"
 pytest-flask = "==1.0.0"
 
